--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>My First Github Repo</title>
 </head>
 <body>
+    <h1>i can push codes in github</h1>
+    <h2>I can code in HTML</h2>
+    <h3>I also kno CSS</h3>
+    <h4>Do you know CSS</h4>
     
 </body>
 </html>
