--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>i can push codes in github</h1>
     <h2>I can code in HTML</h2>
     <h3>I also kno CSS</h3>
     <h4>Do you know CSS</h4>
+    <p>more paragraph</p>
+    <p>I am learning coding</p>
     
 </body>
 </html>
