--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h4>Do you know CSS</h4>
     <p>more paragraph</p>
     <p>I am learning coding</p>
+    <img src="dream holiday.jpg.jpg" alt="">
+    <img src="blue.jpg.jpg" alt="">
     
 </body>
 </html>
