--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h4>Do you know CSS</h4>
     <p>more paragraph</p>
     <p>I am learning coding</p>
+    <img src="images/black.png.png" alt="">
     <img src="dream holiday.jpg.jpg" alt="">
     <img src="blue.jpg.jpg" alt="">
     
